installdir = $(pkglibdir)/python/Plugins/Extensions/CoolTVGuide

SUBDIRS = CoolSkin locale

install_PYTHON = \
				 CoolEasyGuide.pyo \
				 CoolInfoGuide.pyo \
				 CoolSearch.pyo \
				 CoolSingleGuide.pyo \
				 CoolTVGuide.png \
				 __init__.pyo \
				 keymap.xml \
				 maintainer.info \
				 plugin.pyo

