installdir = $(pkglibdir)/python/Plugins/Extensions/MyTube

install_PYTHON =    \
					__init__.pyo \
					LICENSE \
					list_bg.png \
					list_sel.png \
					maintainer.info \
					Makefile.am \
					mytubemain_bg.png \
					MyTubeSearch.pyo \
					MyTubeService.py \
					MyTubeService.pyo \
					plugin.png \
					plugin.pyo \
					starsbar_empty.png \
					starsbar_filled.png \
					suggestions_bg.png \
					ThreadQueue.pyo
