installdir = $(pkglibdir)/python/Plugins/Extensions/CoolTVGuide/Cool3D/Standard

install_PYTHON = \
				CoolBack.png \
				CoolBackS.png \
				CoolFreeTuner.png \
				CoolFreeTunerS.png \
				CoolNow.png \
				CoolNowS.png \
				CoolPicon.png \
				CoolPiconSelect.png \
				CoolPiconSelectS.png \
				CoolPiconS.png \
				CoolPreRec.png \
				CoolPreRecS.png \
				CoolRec.png \
				CoolRecS.png \
				CoolSelect.png \
				CoolSelectS.png 
