installdir = $(pkglibdir)/python/Plugins/Extensions/CoolTVGuide/Cool3D/Standard

dist_install_DATA = \
	CoolBack.png \
	CoolFreeTuner.png \
	CoolNow.png \
	CoolPicon.png \
	CoolPiconSelectS.png \
	CoolPreRec.png \
	CoolRec.png \
	CoolSelect.png \
	CoolBackS.png \
	CoolFreeTunerS.png \
	CoolNowS.png \
	CoolPiconSelect.png \
	CoolPiconS.png \
	CoolPreRecS.png \
	CoolRecS.png \
	CoolSelectS.png
